--- a/Lab5/Tables/Tables.vcxproj.filters
+++ b/Lab5/Tables/Tables.vcxproj.filters
@@ -27,5 +27,8 @@
     <ClInclude Include="HashTable.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
+    <ClInclude Include="LogTables.h">
+      <Filter>Заголовочные файлы</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
