--- a/Lab5/Example/Example.vcxproj
+++ b/Lab5/Example/Example.vcxproj
@@ -89,13 +89,13 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>../Polynomial;../Tables;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../Polynomial;../Tables;../Interface;</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>../Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>Polynomial.lib;Tables.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>Polynomial.lib;Tables.lib;Interface.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
